Arrival times load on screen div

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>MTA Service App</h1>
     <div id="container">
     </div>
+    <div id="arrival-times">
+    </div>
     <script src="./index.js"></script>
   </body>
 </html>
